moving from toolchain plugin to the javac release